--- a/package.json
+++ b/package.json
@@ -57,11 +57,17 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.2.1",
+		"boostrap": "^2.0.0",
+		"bootstrap": "^5.2.3",
+		"font-awesome": "^4.7.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"web-vitals": "^3.1.1",
+		"webkit-npm": "^3.1.1"
 	}
 }
